# kodiapp

./: .gitignore  CHANGELOG.md  KODI_REPO_UPDATE_BEST_PRACTICES.md  LICENSE  LLM_HANDOFF.md  README.md  addon.xml  addons.xml  addons.xml.md5  build.sh  index.html  install-server.sh  kodi-doctor  kodi-xbox-proxy.service  proxy_server.py  pyproject.toml  static_repo_server.py
.github/workflows/: ios-build.yml
.hermes/plans/: remote-plan-option-a.md  remote-plan-option-b2.md  remote-plan-phase2.md
addon/: addon.xml  default.py  iphone_bridge.py
addon/resources/: settings.xml
deprecated/: README.md
deprecated/root-static/: addons.xml.md5
diagnostics/script.kodi.proxyhello/: addon.xml  default.py
diagnostics/script.kodi.proxytest/: addon.xml
docs/plans/: ios-cloud-build-and-sideload.md
helix-addon/: crawler.py  pytest.ini  test_suite.py
helix-addon/tests/: conftest.py  test_backend.py  test_dashboard.py  test_episode_and_live_tv.py  test_litmus.py  test_playback_favorites_trakt.py  test_remote_play_preflight.py  test_router.py  test_user_flows.py
iphone/KodiXboxRemote/: README.md  SIDELOADING.md
plugin.video.helix/: index.html
plugin.video.pov/: index.html
plugin.video.povfork/: index.html
repo_static/: addons.xml  addons.xml.md5  index.html
repo_static/plugin.video.pov/: index.html
repository.dworrall21/: addon.xml
script.xbox.proxy/: index.html
skin.arctic.zephyr.mod/: index.html
source/: build_addon.py
tests/: test_iphone_bridge_protocol.py  test_iphone_swift_static.py  test_repo_manager.py
xbox-remote-drive/: drive.mjs  setup.mjs
(+35 files in other folders)
