[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kodi-xbox-proxy"
version = "1.0.4"
description = "Tunnel Kodi's web interface from Xbox Retail Mode via outbound WebSocket"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "websockets>=10.0",
]

[project.scripts]
kodi-xbox-proxy = "kodi_xbox_proxy.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]
