[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kodi-xbox-proxy"
version = "1.0.10"
description = "Tunnel and control Kodi on Xbox Retail Mode via outbound bridges"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "websockets>=10.0",
]

[project.urls]
Homepage = "https://github.com/Dworrall21/kodiapp"
Repository = "https://github.com/Dworrall21/kodiapp"
Issues = "https://github.com/Dworrall21/kodiapp/issues"

[project.scripts]
kodi-xbox-proxy = "kodi_xbox_proxy.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]
